# aa-wizard-industry

./: .coveragerc  .env  .isort.cfg  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  Makefile  README.md  pyproject.toml  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: automated-checks.yml  potential-duplicates.yml  release.yml
testauth/settings/: base.py  local.py
wizardindustry/: __init__.py  app_settings.py  apps.py  auth_hooks.py  models.py  providers.py  tasks.py  urls.py  utils.py  view_models.py  views.py
wizardindustry/migrations/: 0001_initial.py  0002_alter_baseprice_price.py  0003_remove_baseprice_price_baseprice_base_price.py  0004_invmetatypes.py  0005_owner.py  0006_owner_corporation_owner_evelocation_corporationasset_and_more.py  0007_alter_characterasset_id_alter_corporationasset_id.py  0008_corporationindustryjob_characterindustryjob.py  0009_characterasset_system_corporationasset_system.py  0009_corporationadmin.py
wizardindustry/templates/wizardindustry/: allblueprints.html  base.html  corporation_admin.html  index.html
wizardindustry/templates/wizardindustry/partials/base/: menu.html
wizardindustry/tests/: test_example.py  test_tasks.py
